--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Version: 0.0.0.9000
 Authors@R: 
       c(
     person("Swan", "Jin", email = "swjin@uchicago.edu", role = c("aut", "cre")),
-    person("Minha", "Jeong", email = "mh.jeong999@gmail.com", role = c("aut", "cre")))
+    person("Minha", "Jeong", email = "mh.jeong999@gmail.com", role = c("aut")))
 Description: Successive Nonnegative Projection Algorithm R implementation.
 License: use_mit_license()
 Encoding: UTF-8
