change package specification

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,14 @@
-Package: spa
-Title: Successive Projection Algorithm
+Package: gillis.nmf
+Title: Nonnegetive Matrix Factorization
 Version: 0.0.0.9000
 Authors@R: 
       c(
-    person("Swan", "Jin", email = "swjin@uchicago.edu", role = c("aut", "cre")),
-    person("Minha", "Jeong", email = "mh.jeong999@gmail.com", role = c("aut")))
-Description: Successive Nonnegative Projection Algorithm R implementation.
+    person("Seung-Wan", "Jin", email = "jinsw90@gmail.com", role = c("aut", "cre")),
+    person("Matthew", "Stephens", email = "stephens999@gmail.com", role = c("aut")),
+    person("Min-Ha", "Jeong", email = "mh.jeong999@gmail.com", role = c("aut"))
+    )
+Description: This R package includes Nonnegative Matrix Factorization (NMF) algorithms
+      by translating MATLAB codes in the NMF book (N. Gillis, 2020) into R implementation.
 License: use_mit_license()
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
